Prevent scrolling when side menu is open on mobile

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -164,6 +164,11 @@ main {
   display: none;
 }
 
+.prevent-scroll {
+  z-index: 22;
+  overflow: hidden;
+  position: fixed;
+}
 
 .movie-details {
   position: fixed;
